--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Deploy Dev
 
 on:
   push:
-    branches: [ master ]  
+    branches: [master]
 
 jobs:
   deploy:
@@ -12,11 +12,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Run script on server
-        uses: appleboy/ssh-action@v1.0.3 
+        uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ secrets.DEPLOY_HOST }} 
-          username: ${{ secrets.DEPLOY_USER }}  
-          key: ${{ secrets.DEPLOY_KEY }} 
-          script: | 
+          host: ${{ secrets.DEPLOY_HOST }}
+          username: ${{ secrets.DEPLOY_USER }}
+          password: ${{ secrets.DEPLOY_PASSWORD }}
+          script: |
             cd
             bash server.sh
